charts/istio/authz/customer/authorization-product.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: come2us-customer-access-product
  namespace: come2us
spec:
  selector:
    matchLabels:
      app: product-service
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
      to:
        - operation:
            methods: ["GET", "POST"]
            paths:
              - /carts
        - operation:
            methods: ["PATCH", "DELETE"]
            paths:
              - /carts/*
      when:
        - key: request.auth.claims[authority]
          values: ["CUSTOMER"]
